--- a/eleinfweb.yml
+++ b/eleinfweb.yml
@@ -5,10 +5,10 @@ spring:
 #    active: development
   cloud:
     config:
-      uri: http://localhost:8802
+      uri: http://172.17.210.24:8802
 
   rabbitmq:
-        addresses: amqp://localhost:5672
+        addresses: amqp://172.17.210.24:5672
         username: guest
         password: guest
 
