--- a/eleinfweb.yml
+++ b/eleinfweb.yml
@@ -6,10 +6,10 @@ spring:
   cloud:
     lable: master
     config:
-      uri: http://172.17.210.24:8802
+      uri: http://localhost:8802
 
   rabbitmq:
-        addresses: amqp://172.17.210.24:5672
+        addresses: amqp://localhost:5672
         username: guest
         password: guest
 
