--- a/application.yml
+++ b/application.yml
@@ -2,11 +2,12 @@
 eureka:
 #  datacenter: SpringCloud
 #  environment: Test
-  instance:    prefer-ip-address: true
-    instance-id: ${spring.application.name}:${spring.cloud.client.ipAddress}:${spring.application.instance_id:${server.port}}    
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${spring.cloud.client.ipAddress}:${spring.application.instance_id:${server.port}}
   client:
     serviceUrl:
-      defaultZone: http://18.188.51.39:8801/eureka/
+      defaultZone: http://localhost:8801/eureka/
 
 # ルート情報
 #zuul:
