--- a/application.yml
+++ b/application.yml
@@ -7,9 +7,15 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8801/eureka/
 
-# ルート情報
-#zuul:
-#  routes:
-#    eleinfweb:
-#      url: http://18.188.51.39:8093
-#      name: .*      
+#ルート情報
+zuul:
+  routes:
+    eleinfweb:
+      path: /eleinf/**
+      service-id: ELEINFWEB
+    
+  host:    max-total-connections: 200
+    socket-timeout-millis: 60000
+    connect-timeout-millis: 60000
+    
+    
