--- a/application.yml
+++ b/application.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8801/eureka/
+      defaultZone: http://18.188.51.39:8801/eureka/
   instance:
     preferIpAddress: true
 
@@ -49,21 +49,11 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
 
-  redis:
-        host: 192.168.1.23
-        port: 6379
-#        password: 12345678
-        pool:
-          max-idle: 8
-          min-idle: 0
-          max-active: 8
-          max-wait: -1
-
 #zipkin
   zipkin:
     enabled: true
     #local用
-    #base-url: http://localhost:8803
+    #base-url: http://18.188.51.39:8803
     #pcf用
     base-url: http://zipkin-service.apps.dirpcf.net
     sender:
