--- a/application.yml
+++ b/application.yml
@@ -1,30 +1,25 @@
+##Eurekaサーバクラスターの配置
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://18.188.51.39:8801/eureka/
+      defaultZone: http://18.188.51.39:8801/eureka/,http://18.191.254.108:8811/eureka/
   instance:
     preferIpAddress: true
 
-encrypt:
-  failOnError: false
 
-security:
-  basic:
-    enabled: false
-# datasource
+##zipkinの配置
 spring:
   zipkin:
     enabled: true
-    #local用
-    base-url: http://18.188.51.39:8803/
-    #pcf用
-    #base-url: http://zipkin-service.apps.dirpcf.net
+    base-url: http://18.188.51.39:9411/
     sender:
       type: web
   sleuth:
     sampler:
       percentage: 1.0
 
+
+##Apiのバージョンの配置
 webui:
   GasCustomerContractManage: /GasCustomerContract
   GasOfferManage: /GasOffer
